testing overflow style for greensock scrollto fix

--- a/client/src/components/About.css
+++ b/client/src/components/About.css
@@ -7,7 +7,7 @@
 .sectionContainerInner {
 	position: absolute;
 	width: 100%;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	margin-bottom: 300px;
 }
 
